pass1Parser.java
// Generated from pass1.g4 by ANTLR 4.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;

import java.util.Hashtable;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;
import java.util.HashMap;
import java.util.Map;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class pass1Parser extends Parser {
	private String funcType;
	private String funcName;
	private String className;
	private String classType;
	private Token argumentName;
	private Token argumentType;
	private boolean add;
	
	
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WHITESPACE=1, LINECOMMENT=2, COMMENT=3, INTEGER=4, INHERITS=5, CLASS=6, 
		LET=7, MULTI=8, DIVID=9, ADD=10, SUB=11, ASSIGN=12, TRUE=13, FALSE=14, 
		DOUBLE_COT=15, OPENP=16, CLOSEP=17, NOT_FLAG=18, EQUAL=19, LESS_EQUAL=20, 
		LESS=21, NOT=22, ISVOID=23, NEW=24, START_CASE=25, END_CASE=26, OF=27, 
		BIGER_EQUAL=28, IN=29, WHILE=30, START_LOOP=31, END_LOOP=32, START_IF=33, 
		END_IF=34, ELSE=35, THEN=36, OPENA=37, CLOSEA=38, SEM=39, COM=40, DOTS=41, 
		DOT=42, AT=43, STRING=44, ID=45, TYPE=46;
	public static final String[] tokenNames = {
		"<INVALID>", "WHITESPACE", "LINECOMMENT", "COMMENT", "INTEGER", "INHERITS", 
		"CLASS", "LET", "'*'", "'/'", "'+'", "'-'", "'<-'", "TRUE", "FALSE", "'\"'", 
		"'('", "')'", "NOT_FLAG", "'='", "'<='", "'<'", "'~'", "ISVOID", "NEW", 
		"START_CASE", "END_CASE", "OF", "'=>'", "IN", "WHILE", "START_LOOP", "END_LOOP", 
		"START_IF", "END_IF", "ELSE", "THEN", "'{'", "'}'", "';'", "','", "':'", 
		"'.'", "'@'", "STRING", "ID", "TYPE"
	};
	public static final int
		RULE_program = 0, RULE_classdef = 1, RULE_feature = 2, RULE_formal = 3, 
		RULE_expr = 4, RULE_t = 5, RULE_a = 6, RULE_aa = 7, RULE_b = 8, RULE_bb = 9, 
		RULE_c = 10, RULE_cc = 11, RULE_f = 12, RULE_z = 13, RULE_d = 14, RULE_g = 15, 
		RULE_e = 16;
	public static final String[] ruleNames = {
		"program", "classdef", "feature", "formal", "expr", "t", "a", "aa", "b", 
		"bb", "c", "cc", "f", "z", "d", "g", "e"
	};

	@Override
	public String getGrammarFileName() { return "pass1.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public pass1Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public ClassdefContext classdef(int i) {
			return getRuleContext(ClassdefContext.class,i);
		}
		public List<TerminalNode> SEM() { return getTokens(pass1Parser.SEM); }
		public TerminalNode SEM(int i) {
			return getToken(pass1Parser.SEM, i);
		}
		public List<ClassdefContext> classdef() {
			return getRuleContexts(ClassdefContext.class);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pass1Listener ) ((pass1Listener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pass1Listener ) ((pass1Listener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		/// initialized MainSymbolTable...
		MainProgram.MainSymbolTable.initialized();
		///
		InheritanceGraph.initializeBasicClasses();
		
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
	//		System.out.println("1");
			setState(38); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(35); classdef();
				setState(36); match(SEM);
				}
				}
				setState(40); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==CLASS );
			System.out.println("------------------------------------------------");
			System.out.println("InheritanceGraph:");
			if( InheritanceGraph.printInhertanceGraph() ){
                System.out.println("inheritance graph has cycle!");
                MainProgram.error = true;
                return null;
			}
			
			MainProgram.MainSymbolTable.setparentsnumber();
			System.out.println("********");
			MainProgram.MainSymbolTable.showChildren();
			System.out.println("********");
			
			MainProgram.MainSymbolTable.sortChildrenByparentCount();
			
			System.out.println("********");
			MainProgram.MainSymbolTable.showChildren();
			System.out.println("********");
			
			InheritanceGraph.sync();
			
			System.out.println("****MainSymbolTable****");
			MainProgram.MainSymbolTable.printSymbolTable();
			System.out.println("***********************");
			
			System.out.println();
			System.out.println("------------------------>  ERRORS LIST <------------------------");
			for (int i = 0; i < MainProgram.error_definition.size(); i++) {
				System.out.println(MainProgram.error_definition.get(i));
			}
			System.out.println("----------------------------------------------------------------");
			
			
			}
			
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassdefContext extends ParserRuleContext {
		public Token m;
		public Token n;
		public TerminalNode CLOSEA() { return getToken(pass1Parser.CLOSEA, 0); }
		public TerminalNode OPENA() { return getToken(pass1Parser.OPENA, 0); }
		public List<FeatureContext> feature() {
			return getRuleContexts(FeatureContext.class);
		}
		public FeatureContext feature(int i) {
			return getRuleContext(FeatureContext.class,i);
		}
		public List<TerminalNode> SEM() { return getTokens(pass1Parser.SEM); }
		public TerminalNode INHERITS() { return getToken(pass1Parser.INHERITS, 0); }
		public TerminalNode TYPE(int i) {
			return getToken(pass1Parser.TYPE, i);
		}
		public TerminalNode SEM(int i) {
			return getToken(pass1Parser.SEM, i);
		}
		public List<TerminalNode> TYPE() { return getTokens(pass1Parser.TYPE); }
		public TerminalNode CLASS() { return getToken(pass1Parser.CLASS, 0); }
		public ClassdefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classdef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pass1Listener ) ((pass1Listener)listener).enterClassdef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pass1Listener ) ((pass1Listener)listener).exitClassdef(this);
		}
	}

	public final ClassdefContext classdef() throws RecognitionException {
		ClassdefContext _localctx = new ClassdefContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_classdef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
	//		System.out.println("2");
			setState(45); match(CLASS);
			setState(46); ((ClassdefContext)_localctx).m = match(TYPE);
			setState(49);
			_la = _input.LA(1);
			if (_la==INHERITS) {
				{
				setState(47); match(INHERITS);
				setState(48); ((ClassdefContext)_localctx).n = match(TYPE);
				}
			}

			/////
			String k1 = "Int";
			String k2 = "Bool";
			String k3 = "String";
			String k4 = "SELF_TYPE";
			
			if( ((ClassdefContext)_localctx).n!=null  ){
				if( k1.equals( ((ClassdefContext)_localctx).n.getText() ) ||  k2.equals( ((ClassdefContext)_localctx).n.getText() ) ||  k3.equals( ((ClassdefContext)_localctx).n.getText() ) ||  k4.equals( ((ClassdefContext)_localctx).n.getText() )){
					MainProgram.error = true;
					MainProgram.error_definition.add("\t ERROR: Cannot inherits from '"+((ClassdefContext)_localctx).n.getText()+"'");
					System.out.println("\t ERROR: Cannot inherits from '"+((ClassdefContext)_localctx).n.getText()+"'");
					((ClassdefContext)_localctx).n = null;
				}
			}
			
			className = ((ClassdefContext)_localctx).m.getText();
			
			if(k4.equals(className)){
				MainProgram.error_definition.add("\t ERROR: Cannot redefined SELF_TYPE class.");
				System.out.println("\t ERROR: Cannot redefined SELF_TYPE class.");
				MainProgram.error = true;
			}
				
			if(!InheritanceGraph.basicClasses[0].getName().equals(className) &&
					!InheritanceGraph.basicClasses[1].getName().equals(className) &&
					!InheritanceGraph.basicClasses[2].getName().equals(className) &&
					!InheritanceGraph.basicClasses[3].getName().equals(className) &&
					!InheritanceGraph.basicClasses[4].getName().equals(className) &&
					!k4.equals(className)){
			MainProgram.MainSymbolTable.addClass( ((ClassdefContext)_localctx).n,  ((ClassdefContext)_localctx).m, MainProgram.MainSymbolTable);
			add = true;
			}
			else
				add = false;
			
			/////
			
			setState(51); match(OPENA);
			setState(57);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(52); feature();
				setState(53); match(SEM);
				}
				}
				setState(59);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(60); match(CLOSEA);
			System.out.println("------------------------------------------------");
			
			System.out.println("class defenition: "+((ClassdefContext)_localctx).m.getText() );
			System.out.println("token's type is: \t" + TokenType.getType( ((pass1Parser.ClassdefContext)_localctx).m.getType() )  );
           
			System.out.println("------------------------------------------------");
			
			InheritanceGraph.createInheritanceGraph(((pass1Parser.ClassdefContext)_localctx).m, ((pass1Parser.ClassdefContext)_localctx).n);
			
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FeatureContext extends ParserRuleContext {
		public Token function;
		public Token returnType;
		public Token variableId;
		public Token variableType;
		public TerminalNode CLOSEA() { return getToken(pass1Parser.CLOSEA, 0); }
		public TerminalNode COM(int i) {
			return getToken(pass1Parser.COM, i);
		}
		public TerminalNode OPENA() { return getToken(pass1Parser.OPENA, 0); }
		public TerminalNode DOTS() { return getToken(pass1Parser.DOTS, 0); }
		public FormalContext formal(int i) {
			return getRuleContext(FormalContext.class,i);
		}
		public List<FormalContext> formal() {
			return getRuleContexts(FormalContext.class);
		}
		public TerminalNode CLOSEP() { return getToken(pass1Parser.CLOSEP, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode ASSIGN() { return getToken(pass1Parser.ASSIGN, 0); }
		public TerminalNode ID() { return getToken(pass1Parser.ID, 0); }
		public TerminalNode OPENP() { return getToken(pass1Parser.OPENP, 0); }
		public TerminalNode TYPE() { return getToken(pass1Parser.TYPE, 0); }
		public List<TerminalNode> COM() { return getTokens(pass1Parser.COM); }
		public FeatureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_feature; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pass1Listener ) ((pass1Listener)listener).enterFeature(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pass1Listener ) ((pass1Listener)listener).exitFeature(this);
		}
	}

	public final FeatureContext feature() throws RecognitionException {
		FeatureContext _localctx = new FeatureContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_feature);
		int _la;
		try {
			setState(93);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
		//		System.out.println("3");
				setState(64); ((FeatureContext)_localctx).function = match(ID);
				funcName =  ((FeatureContext)_localctx).function.getText();
				if(add)
				TrivialOperation.addFunc(funcName);
				argumentName = null;
				argumentType = null;
				
				///
				//funcType = TrivialOperation.getFunctionType(funcName, ((FeatureContext)_localctx).returnType);
				//System.out.println(funcType);
				//System.out.println("------------------------------------------------");
				
				//MainProgram.MainSymbolTable.addFunction(((FeatureContext)_localctx).function,MainProgram.MainSymbolTable,className,funcType);
		
				////
				
				setState(65); match(OPENP);
				setState(74);
				_la = _input.LA(1);
				if (_la==ID) {
					{
					setState(66); formal();
					setState(71);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==COM) {
						{
						{
						setState(67); match(COM);
						setState(68); formal();
						}
						}
						setState(73);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
				}

				setState(76); match(CLOSEP);
				setState(77); match(DOTS);
				setState(78); ((FeatureContext)_localctx).returnType = match(TYPE);
				setState(79); match(OPENA);
				setState(80); expr();
				setState(81); match(CLOSEA);
				System.out.println(((FeatureContext)_localctx).function.getText()+"(...) : "+((FeatureContext)_localctx).returnType.getText());
				
				
				///
				if(add)
				funcType = TrivialOperation.getFunctionType(funcName, ((FeatureContext)_localctx).returnType);
				System.out.println(funcType);
				System.out.println("------------------------------------------------");
				
				if(add)
					MainProgram.MainSymbolTable.addFunction(((FeatureContext)_localctx).function,MainProgram.MainSymbolTable,className,funcType);
		
				////
				
				// function arguments
				//if(argumentName != null)
				//	MainProgram.MainSymbolTable.addArgument(argumentName, argumentType, MainProgram.getClassSymbolTable(className), funcName);
				//
				
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
		//		System.out.println("4");
				setState(85); ((FeatureContext)_localctx).variableId = match(ID);
				setState(86); match(DOTS);
				setState(87); ((FeatureContext)_localctx).variableType = match(TYPE);
				setState(90);
				_la = _input.LA(1);
				if (_la==ASSIGN) {
					{
					setState(88); match(ASSIGN);
					setState(89); expr();
					}
				}
				
				
				System.out.println(((FeatureContext)_localctx).variableId.getText()+" : "+((FeatureContext)_localctx).variableType.getText());
				
				
				////
				
				if(add)
					MainProgram.MainSymbolTable.addVariable(((FeatureContext)_localctx).variableId,((FeatureContext)_localctx).variableType,MainProgram.MainSymbolTable,className);
				
				//System.out.println("------------------------------------------------");
				////
				
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FormalContext extends ParserRuleContext {
		public Token inputId;
		public Token inputType;
		public TerminalNode DOTS() { return getToken(pass1Parser.DOTS, 0); }
		public TerminalNode ID() { return getToken(pass1Parser.ID, 0); }
		public TerminalNode TYPE() { return getToken(pass1Parser.TYPE, 0); }
		public FormalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_formal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pass1Listener ) ((pass1Listener)listener).enterFormal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pass1Listener ) ((pass1Listener)listener).exitFormal(this);
		}
	}

	public final FormalContext formal() throws RecognitionException {
		FormalContext _localctx = new FormalContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_formal);
		try {
			enterOuterAlt(_localctx, 1);
			{
	//		System.out.println("5");
			setState(96); ((FormalContext)_localctx).inputId = match(ID);
			setState(97); match(DOTS);
			setState(98); ((FormalContext)_localctx).inputType = match(TYPE);
			System.out.println(((FormalContext)_localctx).inputId.getText()+" : "+((FormalContext)_localctx).inputType.getText());
			
			argumentName = ((FormalContext)_localctx).inputId;
			argumentType = ((FormalContext)_localctx).inputType;
			
			if(add){
				
			TrivialOperation.addArgu(className,funcName,((FormalContext)_localctx).inputType,((FormalContext)_localctx).inputId);
			}
			
			//if(argumentName != null)
			//	MainProgram.MainSymbolTable.addArgument(argumentName, argumentType, MainProgram.getClassSymbolTable(className), funcName);
			
			
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public TerminalNode CLOSEA() { return getToken(pass1Parser.CLOSEA, 0); }
		public List<TerminalNode> DOTS() { return getTokens(pass1Parser.DOTS); }
		public TerminalNode END_CASE() { return getToken(pass1Parser.END_CASE, 0); }
		public TerminalNode START_CASE() { return getToken(pass1Parser.START_CASE, 0); }
		public TContext t() {
			return getRuleContext(TContext.class,0);
		}
		public TerminalNode TYPE(int i) {
			return getToken(pass1Parser.TYPE, i);
		}
		public TerminalNode BIGER_EQUAL(int i) {
			return getToken(pass1Parser.BIGER_EQUAL, i);
		}
		public TerminalNode START_LOOP() { return getToken(pass1Parser.START_LOOP, 0); }
		public TerminalNode IN() { return getToken(pass1Parser.IN, 0); }
		public TerminalNode WHILE() { return getToken(pass1Parser.WHILE, 0); }
		public TerminalNode OPENA() { return getToken(pass1Parser.OPENA, 0); }
		public TerminalNode END_IF() { return getToken(pass1Parser.END_IF, 0); }
		public List<TerminalNode> BIGER_EQUAL() { return getTokens(pass1Parser.BIGER_EQUAL); }
		public TerminalNode LET() { return getToken(pass1Parser.LET, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public TerminalNode END_LOOP() { return getToken(pass1Parser.END_LOOP, 0); }
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode OF() { return getToken(pass1Parser.OF, 0); }
		public List<TerminalNode> TYPE() { return getTokens(pass1Parser.TYPE); }
		public List<TerminalNode> COM() { return getTokens(pass1Parser.COM); }
		public TerminalNode ID(int i) {
			return getToken(pass1Parser.ID, i);
		}
		public TerminalNode THEN() { return getToken(pass1Parser.THEN, 0); }
		public TerminalNode COM(int i) {
			return getToken(pass1Parser.COM, i);
		}
		public TerminalNode START_IF() { return getToken(pass1Parser.START_IF, 0); }
		public TerminalNode OPENP() { return getToken(pass1Parser.OPENP, 0); }
		public List<TerminalNode> ID() { return getTokens(pass1Parser.ID); }
		public TerminalNode SEM(int i) {
			return getToken(pass1Parser.SEM, i);
		}
		public TerminalNode NEW() { return getToken(pass1Parser.NEW, 0); }
		public TerminalNode CLOSEP() { return getToken(pass1Parser.CLOSEP, 0); }
		public TerminalNode DOTS(int i) {
			return getToken(pass1Parser.DOTS, i);
		}
		public TerminalNode ELSE() { return getToken(pass1Parser.ELSE, 0); }
		public List<TerminalNode> ASSIGN() { return getTokens(pass1Parser.ASSIGN); }
		public List<TerminalNode> SEM() { return getTokens(pass1Parser.SEM); }
		public TerminalNode ASSIGN(int i) {
			return getToken(pass1Parser.ASSIGN, i);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pass1Listener ) ((pass1Listener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pass1Listener ) ((pass1Listener)listener).exitExpr(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_expr);
		int _la;
		try {
			setState(191);
			switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
		//		System.out.println("6");
				setState(102); match(ID);
				setState(103); match(ASSIGN);
				setState(104); expr();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
		//		System.out.println("8");
				setState(106); match(ID);
				setState(107); match(OPENP);
				setState(116);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INTEGER) | (1L << LET) | (1L << SUB) | (1L << TRUE) | (1L << FALSE) | (1L << OPENP) | (1L << NOT_FLAG) | (1L << NOT) | (1L << ISVOID) | (1L << NEW) | (1L << START_CASE) | (1L << WHILE) | (1L << START_IF) | (1L << OPENA) | (1L << STRING) | (1L << ID))) != 0)) {
					{
					setState(108); expr();
					setState(113);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==COM) {
						{
						{
						setState(109); match(COM);
						setState(110); expr();
						}
						}
						setState(115);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
				}

				setState(118); match(CLOSEP);
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
		//		System.out.println("9");
				setState(120); match(START_IF);
				setState(121); expr();
				setState(122); match(THEN);
				setState(123); expr();
				setState(124); match(ELSE);
				setState(125); expr();
				setState(126); match(END_IF);
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
		//		System.out.println("10");
				setState(129); match(WHILE);
				setState(130); expr();
				setState(131); match(START_LOOP);
				setState(132); expr();
				setState(133); match(END_LOOP);
				}
				break;

			case 5:
				enterOuterAlt(_localctx, 5);
				{
		//		System.out.println("11");
				setState(136); match(OPENA);
				setState(140); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(137); expr();
					setState(138); match(SEM);
					}
					}
					setState(142); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INTEGER) | (1L << LET) | (1L << SUB) | (1L << TRUE) | (1L << FALSE) | (1L << OPENP) | (1L << NOT_FLAG) | (1L << NOT) | (1L << ISVOID) | (1L << NEW) | (1L << START_CASE) | (1L << WHILE) | (1L << START_IF) | (1L << OPENA) | (1L << STRING) | (1L << ID))) != 0) );
				setState(144); match(CLOSEA);
				}
				break;

			case 6:
				enterOuterAlt(_localctx, 6);
				{
		//		System.out.println("12");
				setState(147); match(LET);
				setState(148); match(ID);
				setState(149); match(DOTS);
				setState(150); match(TYPE);
				setState(153);
				_la = _input.LA(1);
				if (_la==ASSIGN) {
					{
					setState(151); match(ASSIGN);
					setState(152); expr();
					}
				}

				setState(165);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COM) {
					{
					{
					setState(155); match(COM);
					setState(156); match(ID);
					setState(157); match(DOTS);
					setState(158); match(TYPE);
					setState(161);
					_la = _input.LA(1);
					if (_la==ASSIGN) {
						{
						setState(159); match(ASSIGN);
						setState(160); expr();
						}
					}

					}
					}
					setState(167);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(168); match(IN);
				setState(169); expr();
				}
				break;

			case 7:
				enterOuterAlt(_localctx, 7);
				{
		//		System.out.println("13");
				setState(171); match(START_CASE);
				setState(172); expr();
				setState(173); match(OF);
				setState(181); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(174); match(ID);
					setState(175); match(DOTS);
					setState(176); match(TYPE);
					setState(177); match(BIGER_EQUAL);
					setState(178); expr();
					setState(179); match(SEM);
					}
					}
					setState(183); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==ID );
				setState(185); match(END_CASE);
				}
				break;

			case 8:
				enterOuterAlt(_localctx, 8);
				{
		//		System.out.println("14");
				setState(188); match(NEW);
				setState(189); match(TYPE);
				}
				break;

			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(190); t();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TContext extends ParserRuleContext {
		public AContext a() {
			return getRuleContext(AContext.class,0);
		}
		public TerminalNode NOT_FLAG() { return getToken(pass1Parser.NOT_FLAG, 0); }
		public TContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_t; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pass1Listener ) ((pass1Listener)listener).enterT(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pass1Listener ) ((pass1Listener)listener).exitT(this);
		}
	}

	public final TContext t() throws RecognitionException {
		TContext _localctx = new TContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_t);
		try {
			setState(197);
			switch (_input.LA(1)) {
			case NOT_FLAG:
				enterOuterAlt(_localctx, 1);
				{
		//		System.out.println("24");
				setState(194); match(NOT_FLAG);
				setState(195); a();
				}
				break;
			case INTEGER:
			case LET:
			case SUB:
			case TRUE:
			case FALSE:
			case OPENP:
			case NOT:
			case ISVOID:
			case NEW:
			case START_CASE:
			case WHILE:
			case START_IF:
			case OPENA:
			case STRING:
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(196); a();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AContext extends ParserRuleContext {
		public BContext b() {
			return getRuleContext(BContext.class,0);
		}
		public AaContext aa() {
			return getRuleContext(AaContext.class,0);
		}
		public AContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_a; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pass1Listener ) ((pass1Listener)listener).enterA(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pass1Listener ) ((pass1Listener)listener).exitA(this);
		}
	}
